--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@shoutem/ui": "^0.15.0",
+    "chatroom": "0.0.1",
     "expo": "^18.0.3",
+    "firebase": "^4.1.3",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1"
+    "react-native": "^0.45.1",
+    "react-native-device-info": "^0.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.2.9",
+    "redux": "^3.7.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
